--- a/referance_code/samsung_data_merge.ipynb
+++ b/referance_code/samsung_data_merge.ipynb
@@ -2,9 +2,214 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_a</th>\n",
+       "      <th>company</th>\n",
+       "      <th>market</th>\n",
+       "      <th>kind</th>\n",
+       "      <th>item</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>y2017</th>\n",
+       "      <th>y2018</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901001</td>\n",
+       "      <td>총자산(천원)</td>\n",
+       "      <td>301,752,090,000</td>\n",
+       "      <td>339,357,244,000,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901101</td>\n",
+       "      <td>총자산(평균)(천원)</td>\n",
+       "      <td>281,963,207,000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901002</td>\n",
+       "      <td>유동자산(천원)</td>\n",
+       "      <td>146,982,464,000</td>\n",
+       "      <td>174,697,424,000,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901005</td>\n",
+       "      <td>당좌자산(천원)</td>\n",
+       "      <td>121,999,109,000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901030</td>\n",
+       "      <td>현금및현금성자산(천원)</td>\n",
+       "      <td>30,545,130,000</td>\n",
+       "      <td>30,340,505,000,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NF/R-IFRS(C)</td>\n",
+       "      <td>6000501001</td>\n",
+       "      <td>부가가치(천원)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NF/R-IFRS(C)</td>\n",
+       "      <td>6000502001</td>\n",
+       "      <td>자본생산성(%)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NF/R-IFRS(C)</td>\n",
+       "      <td>6000503001</td>\n",
+       "      <td>노동생산성(천원)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>SCF</td>\n",
+       "      <td>S430000200</td>\n",
+       "      <td>종가 (보통)(원)</td>\n",
+       "      <td>2,548,000</td>\n",
+       "      <td>2,568,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>SCF</td>\n",
+       "      <td>S430002205</td>\n",
+       "      <td>수정평균발행주식수 (보통+우선)(주)</td>\n",
+       "      <td>137,994,103</td>\n",
+       "      <td>135,052,727</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>439 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     code   code_a company market          kind        item  \\\n",
+       "0    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901001   \n",
+       "1    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901101   \n",
+       "2    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901002   \n",
+       "3    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901005   \n",
+       "4    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901030   \n",
+       "..    ...      ...     ...    ...           ...         ...   \n",
+       "434  5930  A005930    삼성전자     KS  NF/R-IFRS(C)  6000501001   \n",
+       "435  5930  A005930    삼성전자     KS  NF/R-IFRS(C)  6000502001   \n",
+       "436  5930  A005930    삼성전자     KS  NF/R-IFRS(C)  6000503001   \n",
+       "437  5930  A005930    삼성전자     KS           SCF  S430000200   \n",
+       "438  5930  A005930    삼성전자     KS           SCF  S430002205   \n",
+       "\n",
+       "                item_name            y2017                y2018  \n",
+       "0                 총자산(천원)  301,752,090,000  339,357,244,000,000  \n",
+       "1             총자산(평균)(천원)  281,963,207,000                    0  \n",
+       "2                유동자산(천원)  146,982,464,000  174,697,424,000,000  \n",
+       "3                당좌자산(천원)  121,999,109,000                    0  \n",
+       "4            현금및현금성자산(천원)   30,545,130,000   30,340,505,000,000  \n",
+       "..                    ...              ...                  ...  \n",
+       "434              부가가치(천원)              NaN                  NaN  \n",
+       "435              자본생산성(%)              NaN                  NaN  \n",
+       "436             노동생산성(천원)              NaN                  NaN  \n",
+       "437            종가 (보통)(원)        2,548,000            2,568,000  \n",
+       "438  수정평균발행주식수 (보통+우선)(주)      137,994,103          135,052,727  \n",
+       "\n",
+       "[439 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -54,16 +259,222 @@
     "        elif origin_index == match_index and df_samsung_0.iloc[i,4] == 'SCF':  dfDummy.iloc[i,8] = refer_index\n",
     "\n",
     "dfDummy\n",
-    "dfDummy.to_csv(\"samsung_data_merge.csv\")\n",
     "#print(type(dfDummy))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>code_a</th>\n",
+       "      <th>company</th>\n",
+       "      <th>market</th>\n",
+       "      <th>kind</th>\n",
+       "      <th>item</th>\n",
+       "      <th>item_name</th>\n",
+       "      <th>y2017</th>\n",
+       "      <th>y2018</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901001</td>\n",
+       "      <td>총자산(천원)</td>\n",
+       "      <td>301,752,090,000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901101</td>\n",
+       "      <td>총자산(평균)(천원)</td>\n",
+       "      <td>281,963,207,000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901002</td>\n",
+       "      <td>유동자산(천원)</td>\n",
+       "      <td>146,982,464,000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901005</td>\n",
+       "      <td>당좌자산(천원)</td>\n",
+       "      <td>121,999,109,000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NFS-IFRS(C)</td>\n",
+       "      <td>6000901030</td>\n",
+       "      <td>현금및현금성자산(천원)</td>\n",
+       "      <td>30,545,130,000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NF/R-IFRS(C)</td>\n",
+       "      <td>6000501001</td>\n",
+       "      <td>부가가치(천원)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NF/R-IFRS(C)</td>\n",
+       "      <td>6000502001</td>\n",
+       "      <td>자본생산성(%)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>NF/R-IFRS(C)</td>\n",
+       "      <td>6000503001</td>\n",
+       "      <td>노동생산성(천원)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>SCF</td>\n",
+       "      <td>S430000200</td>\n",
+       "      <td>종가 (보통)(원)</td>\n",
+       "      <td>2,548,000</td>\n",
+       "      <td>2,568,000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>5930</td>\n",
+       "      <td>A005930</td>\n",
+       "      <td>삼성전자</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>SCF</td>\n",
+       "      <td>S430002205</td>\n",
+       "      <td>수정평균발행주식수 (보통+우선)(주)</td>\n",
+       "      <td>137,994,103</td>\n",
+       "      <td>135,052,727</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>439 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     code   code_a company market          kind        item  \\\n",
+       "0    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901001   \n",
+       "1    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901101   \n",
+       "2    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901002   \n",
+       "3    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901005   \n",
+       "4    5930  A005930    삼성전자     KS   NFS-IFRS(C)  6000901030   \n",
+       "..    ...      ...     ...    ...           ...         ...   \n",
+       "434  5930  A005930    삼성전자     KS  NF/R-IFRS(C)  6000501001   \n",
+       "435  5930  A005930    삼성전자     KS  NF/R-IFRS(C)  6000502001   \n",
+       "436  5930  A005930    삼성전자     KS  NF/R-IFRS(C)  6000503001   \n",
+       "437  5930  A005930    삼성전자     KS           SCF  S430000200   \n",
+       "438  5930  A005930    삼성전자     KS           SCF  S430002205   \n",
+       "\n",
+       "                item_name            y2017        y2018  \n",
+       "0                 총자산(천원)  301,752,090,000          NaN  \n",
+       "1             총자산(평균)(천원)  281,963,207,000          NaN  \n",
+       "2                유동자산(천원)  146,982,464,000          NaN  \n",
+       "3                당좌자산(천원)  121,999,109,000          NaN  \n",
+       "4            현금및현금성자산(천원)   30,545,130,000          NaN  \n",
+       "..                    ...              ...          ...  \n",
+       "434              부가가치(천원)              NaN          NaN  \n",
+       "435              자본생산성(%)              NaN          NaN  \n",
+       "436             노동생산성(천원)              NaN          NaN  \n",
+       "437            종가 (보통)(원)        2,548,000    2,568,000  \n",
+       "438  수정평균발행주식수 (보통+우선)(주)      137,994,103  135,052,727  \n",
+       "\n",
+       "[439 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_samsung_0"
+   ]
   },
   {
    "cell_type": "code",
